--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 	--bg: var(--primary);
 	--panel: #12141a;
 	--muted: #3d4042;
-	--muted-light: #C3CBD3;
+	--muted-light: #dfdfdf;
 	--text: #12141a;
 	--text-light: #eef0f3;
 	--primary: #007A8C;
