Update footer layout and add Panoramics logo
Added Panoramics logo to the newsletter section and updated its layout for improved organization. Updated favicon and icon references, adjusted CSS for new logo, and changed home link targets in header and newsletter to root path.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,6 +137,11 @@ p {
 	height: 50px;
 }
 
+.panoramics img {
+		width: 188px;
+		height: 75px;
+	}
+
 .logo-mark {
 	width: 20px;
 	height: 20px;
@@ -1311,8 +1316,7 @@ iframe {
 }
 
 .news-links {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+
 	gap: 16px
 }
 
