--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -331,6 +331,7 @@ p {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-weight: 300;
+	font-size: 26px;
 }
 
 .hero span {
@@ -340,6 +341,12 @@ p {
 .hero p {
 	color: var(--muted-light);
 	margin: 0 0 20px;
+	font-size: 17px;
+}
+
+.hero p span {
+	color: var(--secondary);
+	font-style: italic;
 }
 
 .tx-accent {
@@ -505,6 +512,14 @@ section {
 	padding: 56px 0
 }
 
+.cards-3 .tag{
+	font-size:14px
+}
+
+.cards-3 h2{
+	font-family: 'FinalSix';
+	letter-spacing: 1px;
+}
 .card-grid {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
